# awsync

./: .gitignore  .mise.toml  404.html  CODEOWNERS  Makefile  README.md  automatic_release.sh  docs.sh  index.html  mkdocs.yml  pyproject.toml  release.sh  setup.sh  version_check.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature.yml
.github/workflows/: cicd.yaml
.mise/tasks/: init  release  setup-repo
.mise/tasks/format/: docs
.mise/tasks/lint/: version
awsync/: __main__.py  client.py  request.py
awsync/models/: aws.py  http.py  strenum.py
docs/: index.md
search/: search_index.json
tests/: test_client.py  test_request.py
tests/models/: test_aws.py  test_strenum.py
