[tool.poetry]
name = "awsync"
version = "0.4.5"
description = "An asynchronous, fully-typed AWS API library with a focus on being understandable, reliable, and maintainable."
license = "Apache-2.0"
authors = ["JKCT <jkct@visceralfx.com>"]
readme = "README.md"
packages = [{include = "awsync"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
]
keywords = ["aws", "async", "boto", "request", "sdk", "typed"]
repository = "https://github.com/JKCT/awsync"
documentation = "https://jkct.github.io/awsync/"
include = ["py.typed"] # Typed marker file to indicate package type support

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
mkdocs-material = "^9.5.23"

[tool.mypy]
strict = true
color_output = true
cache_dir = "/tmp/cache/.mypy_cache"

[tool.coverage.run]
omit = ["__main__.py"] # Exclude files from test coverage

[tool.coverage.report]
exclude_also = [ # Exclude code branches by pattern from test coverage
    "async def list_stack_resources",
    "async def get_resource",
    "async def invoke",
    ]

[tool.pytest.ini_options]
testpaths = "tests"
cache_dir = "/tmp/cache/.pytest_cache"
# Require 100% coverage, use exclusions above instead of decreasing percent.
addopts = "-vv --cov=awsync --cov-report term-missing:skip-covered --cov-fail-under=100"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
